objects/Case_Subscription__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Case Subscriptions (Account)</relationshipLabel>
        <relationshipName>Case_Subscriptions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>All_Customer_Communication__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All Customer Communication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_CC_Emails__c</fullName>
        <label>Case BCC Emails</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_Sub_CC_Emails__c</fullName>
        <label>Case CC Emails</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Subscriptions</relationshipLabel>
        <relationshipName>Case_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Case Subscriptions</relationshipLabel>
        <relationshipName>Case_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Follow_on_Chatter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Follow on Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notify_on_First_Email_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify on First Email Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notify_on_New_Case_Creation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify on New Case Creation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Case Subscriptions</relationshipLabel>
        <relationshipName>Case_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Case Subscriptions</relationshipLabel>
        <relationshipName>Case_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Feature_Level_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Feature Level 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product_Feature_Level_1__c.Product_Feature__c</field>
                <operation>equals</operation>
                <valueField>$Source.Product_Feature__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.Product_Feature__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product_Feature_Level_1__c</referenceTo>
        <relationshipLabel>Case Subscriptions</relationshipLabel>
        <relationshipName>Case_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Feature_Level_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Feature Level 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product_Feature_Level_2__c.Product_Feature_Level_1__c</field>
                <operation>equals</operation>
                <valueField>$Source.Product_Feature_Level_1__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.Product_Feature_Level_1__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product_Feature_Level_2__c</referenceTo>
        <relationshipLabel>Case Subscriptions</relationshipLabel>
        <relationshipName>Case_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Feature__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Feature</label>
        <referenceTo>Product_Feature__c</referenceTo>
        <relationshipLabel>Case Subscriptions</relationshipLabel>
        <relationshipName>Case_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product_Class__c.Active_Flag__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product_Class__c</referenceTo>
        <relationshipLabel>Case Subscriptions</relationshipLabel>
        <relationshipName>Case_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QueueEmail__c</fullName>
        <description>Email of the Queue</description>
        <label>QueueEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Queue_Name__c</fullName>
        <label>Queue Users to Follow</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queue__c</fullName>
        <description>Queue Id to be subscribe</description>
        <label>Queue Users to Follow</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region1__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Asia Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subscription_Comments__c</fullName>
        <label>Subscription Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Case_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_s_Cases_to_Follow__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User&apos;s Cases to Follow</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Case_Subscriptions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Case Subscription</label>
    <nameField>
        <displayFormat>Subsc-{0000}</displayFormat>
        <label>Case Subscription Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Subscriptions</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Cannot_select_closed_case</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Case__r.Status , &apos;Closed&apos;) || ISPICKVAL(Case__r.Status , &apos;Completed&apos;)</errorConditionFormula>
        <errorDisplayField>Case__c</errorDisplayField>
        <errorMessage>Cannot select a Case which is Closed or Completed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contact_assoc_Product_must_Acc_ParAcc</fullName>
        <active>true</active>
        <description>Prevents a contact from being associated to a Product if (Account or Parent Account) blank</description>
        <errorConditionFormula>AND (Contact__c != null , Product__c != null,Account__c == null, Parent_Account__c == null)</errorConditionFormula>
        <errorMessage>IF Contacts have a product Attribute specified, they must also have either a parent account or Account Specified as well.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contact_must_not_be_follow_Chatter</fullName>
        <active>true</active>
        <description>NOT ALLOWED :-
Case Subscription record that is associated to a contact from checking the &quot;Follow on Chatter&quot; checkbox.</description>
        <errorConditionFormula>AND(Contact__c != null,  User__c == null ,Follow_on_Chatter__c)</errorConditionFormula>
        <errorDisplayField>Follow_on_Chatter__c</errorDisplayField>
        <errorMessage>A record that is associated to a Contact must not allowed to Follow on Chatter.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Not_Populate_Case_If_CCEmail_Blank</fullName>
        <active>false</active>
        <description>Prevents All Customer Communication from being checked unless there is a Case and CC Emails populated.</description>
        <errorConditionFormula>AND( Case__c != null,  All_Customer_Communication__c=TRUE , ISBLANK(Case_CC_Emails__c ) )</errorConditionFormula>
        <errorDisplayField>Case__c</errorDisplayField>
        <errorMessage>Must provide CC emails if Case is populated and All Customer Communication is checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prod_Feat_Lvl_1_Req_for_Lvl_2</fullName>
        <active>true</active>
        <description>This prevents the selection of a Product Feature Level 2 if a Product Feature Level 1 has not been specified.</description>
        <errorConditionFormula>AND (
ISBLANK( Product_Feature_Level_1__c ),
NOT(ISBLANK( Product_Feature_Level_2__c ) )
)</errorConditionFormula>
        <errorMessage>Product Feature Level 2 cannot be selected if a Product Feature Level 1 has not been specified.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prod_Feat_Req_for_Lvl_1</fullName>
        <active>true</active>
        <description>This prevents the selection of a Product Feature Level 1 if a Product Feature has not been specified.</description>
        <errorConditionFormula>AND (
ISBLANK(  Product_Feature__c  ),
NOT(ISBLANK( Product_Feature_Level_1__c ) )
)</errorConditionFormula>
        <errorMessage>Product Feature Level 1 cannot be selected if a Product Feature has not been specified.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Product_Required_for_Product_Feature</fullName>
        <active>true</active>
        <description>This prevents the selection of a Product Feature if a Product has not been specified.</description>
        <errorConditionFormula>AND (
ISBLANK(  Product__c ),
NOT(ISBLANK(  Product_Feature__c  ) )
)</errorConditionFormula>
        <errorDisplayField>Product_Feature__c</errorDisplayField>
        <errorMessage>Product Feature cannot be selected if a Product Attribute has not been specified.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ValidateFieldsOn_CaseAndCCEmail_Populate</fullName>
        <active>true</active>
        <description>Prevents any other fields from being populated if Case and Case CC Emails are populated.</description>
        <errorConditionFormula>AND( 
	Case__c != null,  Case_CC_Emails__c != null,  
	AND(
		ISCHANGED(Case__c ) , 
		ISCHANGED(Case_CC_Emails__c ) ,
		OR(
				ISCHANGED(Account__c) , 
				ISCHANGED(All_Customer_Communication__c) , 
				ISCHANGED(Contact__c) , 
				ISCHANGED(Follow_on_Chatter__c) , 
				ISCHANGED(Notify_on_First_Email_Only__c) , 
				ISCHANGED(Parent_Account__c) , 
				ISCHANGED(Product__c) , 
				ISCHANGED(User__c) 
		)
		  
	)
)</errorConditionFormula>
        <errorMessage>Can not populate any other fields if Case and Case CC Emails are populated</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Notify_on_first_email_Only</fullName>
        <active>true</active>
        <description>Not allow User to select the &quot;Notify on first email only&quot; if either of the other two checkboxes are selected.</description>
        <errorConditionFormula>AND(OR(All_Customer_Communication__c , Follow_on_Chatter__c ) ,Notify_on_First_Email_Only__c )</errorConditionFormula>
        <errorDisplayField>Notify_on_First_Email_Only__c</errorDisplayField>
        <errorMessage>User is not allowed to select the &quot;Notify on first email only&quot; if either of the other two checkboxes are selected.</errorMessage>
    </validationRules>
</CustomObject>